$Id: History,v 1.115 2001-05-18 10:10:41 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

18th May 2001 John Allison
- Removed unnecessary virtual inheritance of G4VViewer in G4RayTracerViewer.
- Introduced verbosity to ASCIITree.

15th May 2001 John Allison
- Fixed bug in name of /vis/viewer/set/sectionPlane command.

3rd May 2001 John Allison (vis-V03-01-01)
- Changes for greps-V03-01-01 (elimination of RW).
- Improvements in /vis/scene/add/volume.
- Added /vis/drawTree.

10th April 2001  John Allison (vis-V03-01-00)
- Added two new commands:
    /vis/scene/add/text
    /vis/scene/add/axes
- Added first version of ASCIITree to dump geometry hierarchy to
  standard output as ASCII stream.
  This requires two new environment variables:
    G4VIS_BUILD_ASCIITREE_DRIVER
    G4VIS_USE_ASCIITREE
  and config-V03-01-00.

2nd April 2001  John Allison
- Tidied OpenGL (opengl-V03-00-01) - see OpenGL/History.
